Fix migration database (done), config jsonformat, services

--- a/CloneMessengerBackendAPI.Model/App.config
+++ b/CloneMessengerBackendAPI.Model/App.config
@@ -11,6 +11,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="CloneMessengerDataContext" connectionString="data source=.;initial catalog=CloneMessenger;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="CloneMessengerDataContext" connectionString="data source=.;initial catalog=CloneMessenger2;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
