--- a/CloneMessengerBackendAPI.Service/CloneMessengerBackendAPI.Service.csproj
+++ b/CloneMessengerBackendAPI.Service/CloneMessengerBackendAPI.Service.csproj
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=10.0.0.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.10.0.0\lib\net461\AutoMapper.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -51,6 +54,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Mapping\AutoMapperConfiguration.cs" />
+    <Compile Include="Models\Enum.cs" />
+    <Compile Include="Models\ViewModels\ChatGroupFilterModel.cs" />
+    <Compile Include="Models\ViewModels\ChatGroupViewModel.cs" />
+    <Compile Include="Models\ViewModels\ChatGroupDetailViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serviecs\BaseService.cs" />
     <Compile Include="Serviecs\MessageService.cs" />
@@ -64,6 +72,12 @@
       <Project>{c0db8926-e26c-4ea4-b715-7fc42194c4a9}</Project>
       <Name>CloneMessengerBackendAPI.Model</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Models\BaseModels\LazyLoadPagination.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\PostModels\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
