--- a/CloneMessengerBackendAPI.Service/CloneMessengerBackendAPI.Service.csproj
+++ b/CloneMessengerBackendAPI.Service/CloneMessengerBackendAPI.Service.csproj
@@ -54,7 +54,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helper\LinqHelper.cs" />
+    <Compile Include="Helper\StringHelper.cs" />
     <Compile Include="Mapping\AutoMapperConfiguration.cs" />
+    <Compile Include="Models\BaseModels\Acknowledgement.cs" />
     <Compile Include="Models\Enum.cs" />
     <Compile Include="Models\ViewModels\ChatGroupFilterModel.cs" />
     <Compile Include="Models\ViewModels\ChatGroupViewModel.cs" />
@@ -65,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="appsettings.Development.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
