--- a/CloneMessengerBackendAPI.Service/packages.config
+++ b/CloneMessengerBackendAPI.Service/packages.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoMapper" version="10.0.0" targetFramework="net472" />
+  <package id="AutoMapper" version="5.2.0" targetFramework="net472" />
+  <package id="DelegateDecompiler" version="0.28.0" targetFramework="net472" />
+  <package id="DelegateDecompiler.EntityFramework" version="0.28.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="LinqKit.Core" version="1.2.3" targetFramework="net472" />
+  <package id="LinqKit.EntityFramework" version="1.2.3" targetFramework="net472" />
+  <package id="Mono.Reflection.Core" version="1.1.1" targetFramework="net472" />
 </packages>
