--- a/CloneMessengerBackendAPI.Web/packages.config
+++ b/CloneMessengerBackendAPI.Web/packages.config
@@ -4,7 +4,10 @@
   <package id="Autofac" version="6.5.0" targetFramework="net472" />
   <package id="Autofac.Mvc5" version="6.1.0" targetFramework="net472" />
   <package id="Autofac.WebApi2" version="6.1.1" targetFramework="net472" />
+  <package id="AutoMapper" version="5.2.0" targetFramework="net472" />
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
+  <package id="DelegateDecompiler" version="0.28.0" targetFramework="net472" />
+  <package id="DelegateDecompiler.EntityFramework" version="0.28.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net472" />
@@ -22,6 +25,7 @@
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.2" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
+  <package id="Mono.Reflection.Core" version="1.1.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
@@ -30,5 +34,6 @@
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
