Add column chat message group by time, user, Fix api

--- a/CloneMessengerBackendAPI.Model/CloneMessengerBackendAPI.Model.csproj
+++ b/CloneMessengerBackendAPI.Model/CloneMessengerBackendAPI.Model.csproj
@@ -67,6 +67,10 @@
     <Compile Include="Migrations\202212291722578_AddStatusReadMessage.designer.cs">
       <DependentUpon>202212291722578_AddStatusReadMessage.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202212311706385_AddColumnContinuityKeyMessages.cs" />
+    <Compile Include="Migrations\202212311706385_AddColumnContinuityKeyMessages.designer.cs">
+      <DependentUpon>202212311706385_AddColumnContinuityKeyMessages.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\ChatFileAttachment.cs" />
     <Compile Include="Model\User.cs" />
@@ -88,6 +92,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202212291722578_AddStatusReadMessage.resx">
       <DependentUpon>202212291722578_AddStatusReadMessage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202212311706385_AddColumnContinuityKeyMessages.resx">
+      <DependentUpon>202212311706385_AddColumnContinuityKeyMessages.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
