Fix api sendmessage with model. add cache

--- a/CloneMessengerBackendAPI.Model/CloneMessengerBackendAPI.Model.csproj
+++ b/CloneMessengerBackendAPI.Model/CloneMessengerBackendAPI.Model.csproj
@@ -59,6 +59,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConfigureModel\CacheGroupTime.cs" />
+    <Compile Include="ConfigureModel\DefaultConfig.cs" />
     <Compile Include="Migrations\202212271008199_InitCreate.cs" />
     <Compile Include="Migrations\202212271008199_InitCreate.designer.cs">
       <DependentUpon>202212271008199_InitCreate.cs</DependentUpon>
