--- a/CloneMessengerBackendAPI.Service/packages.config
+++ b/CloneMessengerBackendAPI.Service/packages.config
@@ -7,4 +7,9 @@
   <package id="LinqKit.Core" version="1.2.3" targetFramework="net472" />
   <package id="LinqKit.EntityFramework" version="1.2.3" targetFramework="net472" />
   <package id="Mono.Reflection.Core" version="1.1.1" targetFramework="net472" />
+  <package id="System.Configuration.ConfigurationManager" version="7.0.0" targetFramework="net472" />
+  <package id="System.Runtime.Caching" version="7.0.0" targetFramework="net472" />
+  <package id="System.Security.AccessControl" version="6.0.0" targetFramework="net472" />
+  <package id="System.Security.Permissions" version="7.0.0" targetFramework="net472" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net472" />
 </packages>
