--- a/CloneMessengerBackendAPI.Service/packages.config
+++ b/CloneMessengerBackendAPI.Service/packages.config
@@ -8,26 +8,20 @@
   <package id="LinqKit.EntityFramework" version="1.2.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.9" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Abstractions" version="6.25.1" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.25.1" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Logging" version="6.25.1" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Tokens" version="6.25.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.3.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.3.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.3.0" targetFramework="net472" />
+  <package id="Microsoft.Owin" version="4.2.2" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security" version="4.2.2" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.Jwt" version="4.2.2" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.OAuth" version="4.2.2" targetFramework="net472" />
   <package id="Mono.Reflection.Core" version="1.1.1" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net472" />
-  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net472" />
+  <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="7.0.0" targetFramework="net472" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="6.25.1" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
-  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.3.0" targetFramework="net472" />
   <package id="System.Runtime.Caching" version="7.0.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
   <package id="System.Security.AccessControl" version="6.0.0" targetFramework="net472" />
   <package id="System.Security.Permissions" version="7.0.0" targetFramework="net472" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net472" />
-  <package id="System.Text.Encoding" version="4.3.0" targetFramework="net472" />
-  <package id="System.Text.Encodings.Web" version="4.7.1" targetFramework="net472" />
-  <package id="System.Text.Json" version="4.7.2" targetFramework="net472" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
-  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
