--- a/CloneMessengerBackendAPI.Web/packages.config
+++ b/CloneMessengerBackendAPI.Web/packages.config
@@ -13,6 +13,7 @@
   <package id="Microsoft.AspNet.Cors" version="5.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net472" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.4.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.9" targetFramework="net472" />
@@ -27,6 +28,7 @@
   <package id="Microsoft.IdentityModel.Logging" version="5.3.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Tokens" version="5.3.0" targetFramework="net472" />
   <package id="Microsoft.Owin" version="4.2.2" targetFramework="net472" />
+  <package id="Microsoft.Owin.Cors" version="4.2.2" targetFramework="net472" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.2" targetFramework="net472" />
   <package id="Microsoft.Owin.Security" version="4.2.2" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.Jwt" version="4.2.2" targetFramework="net472" />
