Add get currentuser flow, change login identity format

--- a/CloneMessengerBackendAPI.Service/CloneMessengerBackendAPI.Service.csproj
+++ b/CloneMessengerBackendAPI.Service/CloneMessengerBackendAPI.Service.csproj
@@ -93,6 +93,7 @@
     </Reference>
     <Reference Include="System.Core" />
     <Reference Include="System.Data.OracleClient" />
+    <Reference Include="System.IdentityModel" />
     <Reference Include="System.IdentityModel.Tokens.Jwt, Version=5.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\System.IdentityModel.Tokens.Jwt.5.3.0\lib\net461\System.IdentityModel.Tokens.Jwt.dll</HintPath>
     </Reference>
@@ -113,6 +114,7 @@
     <Reference Include="System.Security.Principal.Windows, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Security.Principal.Windows.5.0.0\lib\net461\System.Security.Principal.Windows.dll</HintPath>
     </Reference>
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.Web.Http, Version=5.2.9.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -135,6 +137,7 @@
     <Compile Include="Interfaces\IUserService.cs" />
     <Compile Include="Models\BaseModels\Acknowledgement.cs" />
     <Compile Include="Models\BaseModels\Authentication.cs" />
+    <Compile Include="Models\BaseModels\CacheGroupTime.cs" />
     <Compile Include="Models\Enum.cs" />
     <Compile Include="Models\ViewModels\PageDefaultModel.cs" />
     <Compile Include="Models\ViewModels\PaginationModel.cs" />
