--- a/CloneMessengerBackendAPI.Service/packages.config
+++ b/CloneMessengerBackendAPI.Service/packages.config
@@ -6,6 +6,7 @@
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="LinqKit.Core" version="1.2.3" targetFramework="net472" />
   <package id="LinqKit.EntityFramework" version="1.2.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.4.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.9" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.3.0" targetFramework="net472" />
