--- a/CloneMessengerBackendAPI.Service/packages.config
+++ b/CloneMessengerBackendAPI.Service/packages.config
@@ -4,6 +4,7 @@
   <package id="DelegateDecompiler" version="0.28.0" targetFramework="net472" />
   <package id="DelegateDecompiler.EntityFramework" version="0.28.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="Facebook" version="7.0.6" targetFramework="net472" />
   <package id="LinqKit.Core" version="1.2.3" targetFramework="net472" />
   <package id="LinqKit.EntityFramework" version="1.2.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.4.3" targetFramework="net472" />
