--- a/CloneMessengerBackendAPI.Web/packages.config
+++ b/CloneMessengerBackendAPI.Web/packages.config
@@ -6,7 +6,9 @@
   <package id="DelegateDecompiler" version="0.28.0" targetFramework="net472" />
   <package id="DelegateDecompiler.EntityFramework" version="0.28.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="Facebook" version="7.0.6" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
+  <package id="LinqKit" version="1.2.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.Cors" version="5.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net472" />
@@ -32,6 +34,7 @@
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.2" targetFramework="net472" />
   <package id="Microsoft.Owin.Hosting" version="4.2.2" targetFramework="net472" />
   <package id="Microsoft.Owin.Security" version="4.2.2" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.Facebook" version="3.1.0" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.Jwt" version="4.2.2" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.OAuth" version="4.2.2" targetFramework="net472" />
   <package id="Microsoft.Owin.SelfHost" version="2.1.0" targetFramework="net472" />
